--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Refinements JavaScript test</title>
-        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         <aside class="refinements" data-hasanyselected="false">
@@ -206,9 +206,6 @@
                 </div>
             </div>
         </aside>
-        <script type='text/javascript' id="__bs_script__">//<![CDATA[
-    document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.2.9.11.js'><\/script>".replace("HOST", location.hostname));
-//]]></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js" type="text/javascript"></script>
         <script async src="js/refinements.js" type="text/javascript"></script>
     </body>
